# manim_tests

./: .gitignore  README.md  euler.py  main.py  nano_eq.py  pyproject.toml
media/Tex/: 0188a5b9bd699a7b.dvi  0188a5b9bd699a7b.tex  049324c46070fc62.dvi  0d2395dad8a1071b.tex  0dd4d8cb0c0b6452.tex  0ff3a5ae4aba7ccf.tex  11fcd8b5210dccdd.tex  122346b4e4e84c25.dvi  13da691a75b09453.dvi  13da691a75b09453.tex  1644b228faa44630.dvi  1644b228faa44630.tex  1683d4de39afb75f.dvi  1683d4de39afb75f.tex  16b4024500825c51.dvi  16b4024500825c51.tex  17b40b5b8c1a3136.dvi  17b40b5b8c1a3136.tex  1908aaa95f74dfee.dvi  1908aaa95f74dfee.tex  194f99da277fd3ac.tex  1b1e2f1060c8e184.dvi  1b1e2f1060c8e184.tex  1c10588a82bf2137.dvi  1c10588a82bf2137.tex  1de5126931514d17.dvi  1de5126931514d17.tex  20a236f697009a6e.dvi  20a236f697009a6e.tex  23523ffaddbf3bf2.dvi  23523ffaddbf3bf2.tex  23e18b4af67c5345.dvi  23e18b4af67c5345.tex  26afa8ab7de77df2.dvi  26afa8ab7de77df2.tex  29a3a21aad325ce3.tex  2c49523f89d47461.dvi  32d8a60844c28782.dvi  32d8a60844c28782.tex  36145cca7bd2ffc6.dvi  (+147 more)
media/videos/euler/1080p60/partial_movie_files/Eqq/: partial_movie_file_list.txt
media/videos/euler/1080p60/sections/: Eqq.json
media/videos/main/1080p60/partial_movie_files/Eq/: partial_movie_file_list.txt
media/videos/main/1080p60/partial_movie_files/Eqq/: partial_movie_file_list.txt
media/videos/main/1080p60/partial_movie_files/ShowWrite/: partial_movie_file_list.txt
media/videos/main/1080p60/sections/: Eq.json  Eqq.json  ShowWrite.json
