[tool.poetry]
name = "manim-tests"
version = "0.1.0"
description = ""
authors = ["reinanbr <perseu912@gmail.com>"]
readme = "README.md"
packages = [{include = "manim_tests"}]

[tool.poetry.dependencies]
python = "3.11"
manim = "^0.17.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
